--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ div.bckgrd{
 #pix{
     position: absolute;
     top: 25em;
-    left: 42em;
+    left:90%;
 }
 
 #bckgrd2{
@@ -38,10 +38,6 @@ ul#nav li{
     padding: 0px 1.5em 0px 1.5em;
     color: white;
     
-}
-
-a.lk:link{
-    text-decoration: none;
 }
 
 a.lk:hover{
@@ -102,7 +98,7 @@ ul#nav{
 
 
 
-#about p{
+p#txt{
     letter-spacing: .2px;
     line-height: 30px;
     color:rgb(102, 96, 96);
@@ -269,7 +265,7 @@ form textarea{
     height:150px;
 }
 
-#send{
+#myform #send{
     background-color: blue;
     border-radius: 20px;
     width: 150px;
@@ -290,7 +286,7 @@ form textarea{
 .detail{
     position: absolute;
     top: 6em;
-    left: 45em;
+    right: 15em;
 }
 
 .detail h3{
@@ -344,20 +340,20 @@ form textarea{
     height: 46px;
 }
 
+#jsh{
+    
+    width: 49px;
+    height: 49px;
+}
+
 footer{
+    color: black;
     font-family: arial;
     text-align: center;
 }
 
-footer#call{
-    color: black;
-}
-
 #call{
     position: absolute;
-    top: 1em;
-    text-decoration: none;
-    color: black;
     padding-left: 4px;
 }
 
@@ -376,7 +372,10 @@ ul#nav2{
     text-align: center;
 }
 
-
+a:link{
+    text-decoration: none;
+    color: blue;
+}
 
 
 #omega{
@@ -408,3 +407,39 @@ a.foot:hover{
     font-weight: bold;
     
 }
+
+.error{
+    font-size: 18px;
+    color: white;
+    margin-bottom: 10px;
+    border: 2px solid rgb(235, 127, 127);
+    background-color: rgb(235, 127, 127);
+    width: 130px;
+    padding-left: 5px;
+    border-radius:20px;
+}
+
+.hire1{
+    background:red;
+}
+
+.abtme{
+   background-color:rgb(131, 131, 238); 
+   border-radius: 20px;
+   border: 2px solid red;
+   padding: 5px;
+
+}
+
+
+.dtail{
+    background-color:rgb(131, 131, 238); 
+    border-radius: 20px;
+    border: 2px solid rgb(131, 131, 238); 
+    padding: 5px;
+ 
+ }
+
+ .tofill{
+    box-shadow: #6B76FF 0px 0px 10px;
+ }
